# numclassify

./: .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  PERFORMANCE.md  README.md  SECURITY.md  index.html  mkdocs.yml  numclassify.py  playground-base.css  playground-core.js  playground-guide.css  playground-guide.js  playground-tabs.js  playground.css  playground.html  playground.js  pyproject.toml  sitemap.xml  test.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
changelog/: index.html
cli/: index.html
docs/: api.md  changelog.md  cli.md  index.md  playground-base.css  playground-core.js  playground-guide.js  playground-tabs.js  playground.css  playground.html  playground.js
docs/extra/: saffron.css
examples/: basic_usage.py  custom_type.py  find_perfect_numbers.py  random_classify.py  stream_large_range.py
numclassify/: __init__.py  __main__.py  _explain_templates.py  _registry.py  cli.py
numclassify/_core/: combinatorial.py  digital.py  divisors.py  exam_types.py  figurate.py  number_theory.py  powers.py  primes.py  recreational.py  sequences.py
search/: search_index.json
site/: index.html  sitemap.xml
site/changelog/: index.html
site/search/: search_index.json
tests/: test_cli.py  test_cli_direct.py  test_doc_automation.py  test_edge_cases_sweep.py  test_explain_templates.py  test_main_py.py  test_new_api.py  test_registry.py  test_registry_more.py
tools/: audit_explain.py  check_repo.py  fix_encoding.py  fix_playground_encoding.py  generate_docs.py  release.py  scaffold_type.py
