[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numclassify"
version = "0.1.0"
description = "The most comprehensive Python library for number classification — 3000+ number types"
authors = [{name = "Aratrik Ghosh", email = "aratrikghosh2011@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["number-theory", "mathematics", "classification", "armstrong", "prime", "figurate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aratrikghosh2011-tech/numclassify"
Repository = "https://github.com/aratrikghosh2011-tech/numclassify"
Issues = "https://github.com/aratrikghosh2011-tech/numclassify/issues"

[project.scripts]
numclassify = "numclassify.cli:main"